# s-util

./: .gitignore  CMakeLists.txt  README  _PKGBUILD  _PKGBUILD-git  addcrt  addpkla  bash-completion.sh  bdroot  cback  cempty  clpbd  dlblk  edasrc  fcopy  fpaste  import-cert  import.sh  install  linenoise  lsutil  mitclass  netman  plaste  profile.sh  recget  s_init.sh  s_install  s_uinstl  search  setup.sh  spath  spid  texit  xopen
bash/: addpkla  bdroot  blockip  dlblk  edasrc  netman  recget  s_init.sh  search  spath  spid  texit  xopen
python/: stdnames.py
